<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_quest_view_preview"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
        card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/image_preview_quest"
                android:layout_width="match_parent" android:layout_height="140dp"
                android:contentDescription="@string/quest_img_desc"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/text_number_quest"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_preview_quest" android:textSize="18sp"/>
        <View
                android:id="@+id/vertical_line"
                android:layout_width="1dp" android:layout_height="0dp"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/text_number_quest" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/text_content_quest"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:gravity="end"
                android:text="@string/date_time_start"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@+id/vertical_line"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/vertical_line"/>
        <TextView
                android:id="@+id/text_place"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:text="@string/location"
                android:textSize="12sp"
                android:gravity="end"
                app:layout_constraintTop_toBottomOf="@+id/text_content_quest"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/vertical_line"/>
        <TextView
                android:id="@+id/text_date_start"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@+id/vertical_line"
                app:layout_constraintStart_toEndOf="@+id/vertical_line" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/text_place_start"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/text_date_start"
                app:layout_constraintStart_toEndOf="@+id/vertical_line" app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/but_apply"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/apply"
                android:backgroundTint="@color/button_color"
                android:textColor="@color/button_text_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/vertical_line"
                app:layout_constraintTop_toBottomOf="@+id/text_place" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>