<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:tag="FragmentQuestTextImg"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
                android:id="@+id/text_title_of_quest"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/text_stage"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/time_at_this_stage"
                android:textSize="10sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/text_time_stage"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/default_time"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@+id/text_stage"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/text_time_until_finish"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/default_time"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@+id/text_quest"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/text_quest"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/time_to_end"
                android:textSize="10sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_quest_view"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_title_of_quest"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                card_view:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent" android:layout_height="match_parent">

                <TextView
                        android:id="@+id/text_number_quest"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:textColor="@android:color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                        android:id="@+id/text_content_quest"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/image_quest"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_answer"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_content_quest"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@id/button_check_answer">

                    <EditText
                            android:id="@+id/edit_answer"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                            android:inputType="text"
                            android:ems="10"
                            android:hint="@string/hint_answer"
                            android:textSize="14sp"
                            android:importantForAutofill="no"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/button_check_answer"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/send"
                        android:textColor="@color/colorWhite"
                        android:textSize="10sp"
                        app:layout_constraintTop_toBottomOf="@+id/text_content_quest"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <ImageView
                        android:id="@+id/image_quest"
                        android:layout_width="0dp" android:layout_height="140dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:contentDescription="@string/image_desc"
                        app:layout_constraintTop_toBottomOf="@id/text_number_quest"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        card_view:srcCompat="@drawable/logo"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/card_tip_1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_quest_view"
            layout="@layout/tip_view"/>

        <include
            android:id="@+id/card_tip_2"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_tip_1"
            layout="@layout/tip_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>